3.0 audoappend controller func
